--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 body {
     color: blue;
     background-color: blueviolet;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+ul {
+    justify-content: space-between;
+    list-style-type: none;
+    align-items: center;
+    padding: 16px;
 }
