--- a/style.css
+++ b/style.css
@@ -1,12 +1,25 @@
 body {
-    color: blue;
+    color: white;
     background-color: blueviolet;
     font-family: 'Times New Roman', Times, serif;
 }
 
 ul {
+    display: flex;
     justify-content: space-between;
     list-style-type: none;
     align-items: center;
     padding: 16px;
+}
+
+a{
+    color: aliceblue;
+    text-decoration: none;
+}
+
+img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 5px solid red;
 }
