--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     color: white;
-    background-color: blueviolet;
+    background-color: black;
     font-family: 'Times New Roman', Times, serif;
 }
 
@@ -21,7 +21,7 @@ img {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    border: 5px solid red;
+    border: 5px solid rgb(255, 0, 119);
 }
 
 .center {]
