--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     font-family: 'Times New Roman', Times, serif;
 }
 
