--- a/style.css
+++ b/style.css
@@ -31,3 +31,30 @@ img {
 h1 {
     color: rgb(255, 0, 140)
 }
+
+footer img {
+    width: 40px;
+    height: 40px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+}
+
+footer a {
+    margin: 20px;
+    text-align: center;
+}
+
+footer p {
+    margin-top: 2px;
+}
+
+.container {
+    padding: 0px 50px;
+}
+
+nav a:houver {
+    color: blue;
+}
