--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     color: black;
     background-color: white;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 ul {
